# django-car-exhibitions

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/cars/: models.py  serializers.py
backend/cars/migrations/: 0001_initial.py  0002_alter_car_exhibition_delete_exhibition.py  0003_alter_car_additional_features_alter_car_description_and_more.py
backend/cars/tests/: test_models.py  test_serializer.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/exhibitions/: models.py  serializers.py  urls.py  views.py
backend/exhibitions/migrations/: 0001_initial.py  0002_exhibition_cover_image.py  0003_exhibition_ticket_price.py  0004_alter_exhibition_address_and_more.py
backend/exhibitions/tests/: test_models.py  test_serializer.py  test_views.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/assets/images/: about.avif
frontend/src/components/: Exhibitions.jsx
frontend/src/components/shared/: AppFooter.jsx  AppHeader.jsx
frontend/src/contexts/: ExhibitionsContext.jsx  SingleExhibitionContext.jsx
frontend/src/pages/: About.jsx  Home.jsx  SingleExhibition.jsx
